--- a/FA/FA.csproj
+++ b/FA/FA.csproj
@@ -9,11 +9,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>DEBUG;TRACE;FLIB</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;FALIB</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>TRACE;FLIB</DefineConstants>
+    <DefineConstants>TRACE;FALIB</DefineConstants>
   </PropertyGroup>
 
 </Project>
