--- a/Lex/Lex.csproj
+++ b/Lex/Lex.csproj
@@ -2,25 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>F</RootNamespace>
-    <AssemblyName>FA</AssemblyName>
+    <RootNamespace>L</RootNamespace>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>DEBUG;TRACE;FALIB</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;LLIB</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>TRACE;FALIB</DefineConstants>
+    <DefineConstants>TRACE;LLIB</DefineConstants>
   </PropertyGroup>
 
-  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="&quot;$(SolutionDir)CharClsTableGen.exe&quot; &quot;$(ProjectDir)CharacterClasses.cs&quot;" />
-  </Target>
-
   <ItemGroup>
+    <ProjectReference Include="..\FA\FA.csproj" />
     <ProjectReference Include="..\LexContext\LexContext.csproj" />
   </ItemGroup>
 
