--- a/LexDemo/LexDemo.csproj
+++ b/LexDemo/LexDemo.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{42203212-8CAA-4438-B564-8DF1543143B3}</ProjectGuid>
+    <ProjectGuid>{A8C52CD4-EE5E-4559-BA4C-3B9A77CEBF89}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Rolex</RootNamespace>
-    <AssemblyName>rolex</AssemblyName>
+    <RootNamespace>LexDemo</RootNamespace>
+    <AssemblyName>LexDemo</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,45 +32,30 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeDomUtility.cs" />
-    <Compile Include="CodeDomVisitor.cs" />
-    <Compile Include="CodeGenerator.cs" />
-    <Compile Include="FA.brick.cs" />
-    <Compile Include="LexContext.brick.cs" />
-    <Compile Include="PrototypeTokenizer.cs" />
-    <Compile Include="Token.cs" />
-    <Content Include="Export\PrototypeTokenizerTemplate.cs" />
-    <Content Include="Export\TableTokenizer.cs" />
-    <Content Include="Export\TableTokenizerTemplate.cs" />
-    <Content Include="Export\Token.cs" />
-    <Compile Include="Deslanged.cs" />
-    <Compile Include="LexRule.cs" />
+    <Compile Include="ConsoleUtility.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Example.rl" />
-    <None Include="Key.snk" />
+    <Content Include="identifier.lasm" />
+    <Content Include="lexer.lasm" />
+    <None Include="dfa.lasm" />
+    <None Include="int.lasm" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LexContext\LexContext.csproj">
+      <Project>{240ac77d-3deb-4415-842b-8c0226d42593}</Project>
+      <Name>LexContext</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Lex\Lex.csproj">
+      <Project>{4faf16f7-0493-4429-9ea1-ba4a8ae86085}</Project>
+      <Name>Lex</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>"$(SolutionDir)csbrick.exe" "$(SolutionDir)FA\FA.csproj" /output "$(ProjectDir)FA.brick.cs"
-"$(SolutionDir)csbrick.exe" "$(SolutionDir)LexContext\LexContext.csproj" /output "$(ProjectDir)LexContext.brick.cs"
-"$(SolutionDir)deslang.exe" "$(ProjectDir)Export\PrototypeTokenizerTemplate.cs" "$(ProjectDir)Export\TableTokenizer.cs" "$(ProjectDir)Export\TableTokenizerTemplate.cs" "$(ProjectDir)Export\Token.cs" /output "$(ProjectDir)Deslanged.cs" /namespace Rolex /ifstale</PreBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)"</PostBuildEvent>
-  </PropertyGroup>
 </Project>
