--- a/Lexly/Lexly.csproj
+++ b/Lexly/Lexly.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{42203212-8CAA-4438-B564-8DF1543143B3}</ProjectGuid>
+    <ProjectGuid>{4B30D333-1DB5-4035-8996-E233AAA23C0D}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Rolex</RootNamespace>
-    <AssemblyName>rolex</AssemblyName>
+    <RootNamespace>Lexly</RootNamespace>
+    <AssemblyName>Lexly</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,30 +45,39 @@
   <ItemGroup>
     <Compile Include="CodeDomUtility.cs" />
     <Compile Include="CodeDomVisitor.cs" />
-    <Compile Include="CodeGenerator.cs" />
-    <Compile Include="FA.brick.cs" />
-    <Compile Include="LexContext.brick.cs" />
-    <Compile Include="PrototypeTokenizer.cs" />
-    <Compile Include="Token.cs" />
-    <Content Include="Export\PrototypeTokenizerTemplate.cs" />
-    <Content Include="Export\TableTokenizer.cs" />
-    <Content Include="Export\TableTokenizerTemplate.cs" />
-    <Content Include="Export\Token.cs" />
-    <Compile Include="Deslanged.cs" />
-    <Compile Include="LexRule.cs" />
+    <Compile Include="Deslanged.Export.cs" />
+    <Compile Include="Export\Token.cs" />
+    <Compile Include="Export\Tokenizer.cs" />
+    <Content Include="Export\TokenizerTemplate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Example.rl" />
+    <None Include="Example.lx" />
     <None Include="Key.snk" />
+    <None Include="Slang.lx" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FA\FA.csproj">
+      <Project>{b6c72046-0d75-425f-b791-6ced5aaaca56}</Project>
+      <Name>FA</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LexContext\LexContext.csproj">
+      <Project>{4d205050-39e1-4c0f-9205-fde43b73095a}</Project>
+      <Name>LexContext</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Lex\Lex.csproj">
+      <Project>{596d1001-ce23-4268-8ebf-f267131a8430}</Project>
+      <Name>Lex</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>"$(SolutionDir)csbrick.exe" "$(SolutionDir)FA\FA.csproj" /output "$(ProjectDir)FA.brick.cs"
-"$(SolutionDir)csbrick.exe" "$(SolutionDir)LexContext\LexContext.csproj" /output "$(ProjectDir)LexContext.brick.cs"
-"$(SolutionDir)deslang.exe" "$(ProjectDir)Export\PrototypeTokenizerTemplate.cs" "$(ProjectDir)Export\TableTokenizer.cs" "$(ProjectDir)Export\TableTokenizerTemplate.cs" "$(ProjectDir)Export\Token.cs" /output "$(ProjectDir)Deslanged.cs" /namespace Rolex /ifstale</PreBuildEvent>
+    <PreBuildEvent>"$(SolutionDir)csbrick.exe" "$(SolutionDir)LexContext\LexContext.csproj" /output "$(ProjectDir)LexContext.brick.cs"
+"$(SolutionDir)csbrick.exe" "$(SolutionDir)FA\FA.csproj" /output "$(ProjectDir)FA.brick.cs"
+"$(SolutionDir)csbrick.exe" "$(SolutionDir)Lex\Lex.csproj" /output "$(ProjectDir)Lex.brick.cs"
+"$(SolutionDir)deslang.exe" "$(ProjectDir)Export\Token.cs" "$(ProjectDir)Export\Tokenizer.cs" "$(ProjectDir)Export\TokenizerTemplate.cs" /output "$(ProjectDir)Deslanged.Export.cs" /mutable /ifstale</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)"</PostBuildEvent>
