--- a/FA/FA.csproj
+++ b/FA/FA.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\LexContext\LexContext.csproj" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)&quot;" />
+  </Target>
+
 </Project>
