--- a/LexContext/LexContext.csproj
+++ b/LexContext/LexContext.csproj
@@ -15,4 +15,8 @@
     <DefineConstants>TRACE;LCLIB</DefineConstants>
   </PropertyGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)&quot;" />
+  </Target>
+
 </Project>
