--- a/LexDemo/LexDemo.csproj
+++ b/LexDemo/LexDemo.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleUtility.cs" />
+    <Compile Include="PrecisionDateTime.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
