Fixed bug in FA Emit

--- a/Lexly/Lexly.csproj
+++ b/Lexly/Lexly.csproj
@@ -49,9 +49,6 @@
     <Compile Include="Export\Token.cs" />
     <Compile Include="Export\Tokenizer.cs" />
     <Content Include="Export\TokenizerTemplate.cs" />
-    <Compile Include="FA.brick.cs" />
-    <Compile Include="Lex.brick.cs" />
-    <Compile Include="LexContext.brick.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -60,6 +57,20 @@
     <None Include="Example.lx" />
     <None Include="Key.snk" />
     <None Include="Slang.lx" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FA\FA.csproj">
+      <Project>{b6c72046-0d75-425f-b791-6ced5aaaca56}</Project>
+      <Name>FA</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LexContext\LexContext.csproj">
+      <Project>{4d205050-39e1-4c0f-9205-fde43b73095a}</Project>
+      <Name>LexContext</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Lex\Lex.csproj">
+      <Project>{596d1001-ce23-4268-8ebf-f267131a8430}</Project>
+      <Name>Lex</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
