--- a/Rolex/Rolex.csproj
+++ b/Rolex/Rolex.csproj
@@ -46,7 +46,6 @@
     <Compile Include="CodeDomUtility.cs" />
     <Compile Include="CodeDomVisitor.cs" />
     <Compile Include="CodeGenerator.cs" />
-    <Compile Include="FA.brick.cs" />
     <Compile Include="LexContext.brick.cs" />
     <Compile Include="PrototypeTokenizer.cs" />
     <Compile Include="Token.cs" />
@@ -63,6 +62,13 @@
     <None Include="App.config" />
     <None Include="Example.rl" />
     <None Include="Key.snk" />
+    <None Include="Slang.rl" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FA\FA.csproj">
+      <Project>{b6c72046-0d75-425f-b791-6ced5aaaca56}</Project>
+      <Name>FA</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
