--- a/LexDemo/LexDemo.csproj
+++ b/LexDemo/LexDemo.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleUtility.cs" />
-    <Compile Include="PrecisionDateTime.cs" />
+    <Compile Include="DateTimeUtility.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
